# gello_xArm5

./: .gitignore  INSTALL_GUIDE.md  README.md  README_position_locking.md  pyproject.toml
experiments/: launch_nodes.py  quick_run.py
gello/agents/: gello_agent.py
gello/dynamixel/: driver.py
gello/robots/: dynamixel.py  xarm5_robot.py
scripts/: gello_position_lock_demo.py  setup_xarm5.py  simple_motor_lock_test.py  xarm5_example.py
